--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>线上售楼PC端</title>
+    <title>智能助手</title>
+    <style>
+        html, body {
+            height: 100%;
+            width: 100%;
+        }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+    </style>
 </head>
 
 <body>
-	线上售楼PC端，敬请期待！
+    <div class="container">
+        <div>
+            智能助手服务已迁移到新网址，请点击<a href="https://laughsky.idea-group.cn">这里</a>继续！
+        </div>
+    </div>
 </body>
 
 </html>
