--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container">
         <div>
-            智能助手服务已迁移到新网址，请<a href="https://laughsky.idea-group.cn">点击这里</a>访问！
+            智能助手服务已迁移到新网址，请<a href="https://chat.laughsky.top">点击这里</a>访问！
         </div>
     </div>
 </body>
